# CraftCruncher

./: .gitignore  Cargo.toml
src/: main.rs
src/categorizer/: runner.rs
src/core/: mod.rs
src/core/database/: database_api.rs  mod.rs
src/core/plugin_data/: author.rs  mod.rs  plugin_info.rs  plugin_meta.rs  version_data.rs
src/core/resources/sql/: init.sql  insert_author.sql  insert_author_plugin_relation.sql  insert_plugin_meta.sql  select_author.sql  select_plugin_meta.sql
src/fetcher/: runner.rs
src/resolver/: runner.rs
tests/database/: database_test.rs
