[package]
name = "craft_cruncher"
version = "0.1.0"
authors = ["Thorinwasher", "Pheotis"]
homepage = "https://craftcruncher.thorinwasher.dev"
repository = "https://github.com/CraftCruncher/CraftCruncher"
edition = "2021"

[lib]
name = "craft_cruncher_core"
path = "src/lib.rs"

[[bin]]
name = "fetcher"

[[bin]]
name = "categorizer"

[[bin]]
name = "resolver"

[dependencies]
bytes = "1.7.1"
getopt = "1.1.7"
getopts = "0.2.21"
postgres = "0.19.8"
