[package]
name = "craft_cruncher"
version = "0.1.0"
authors = ["Thorinwasher", "Pheotis"]
homepage = "https://craftcruncher.thorinwasher.dev"
repository = "https://github.com/CraftCruncher/CraftCruncher"
edition = "2021"

[lib]
name = "craft_cruncher_core"
path = "src/lib.rs"

[[bin]]
name = "fetcher"

[[bin]]
name = "categorizer"

[[bin]]
name = "resolver"

[tests]
path = "tests"

[dependencies]
bytes = "1.7.2"
postgres = {version = "0.19.9", features = ["with-serde_json-1"]}
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
tokio = "1.40.0"
reqwest = "0.12.7"
tokio-postgres = "0.7.12"
tokio-stream = "0.1.16"

[dev-dependencies]
testcontainers-modules = {version = "0.11.0", features = ["postgres", "blocking"]}
